===============
Stalker Changes
===============

v0.1.2.a1
----------

 * Started to switch to SQLAlchemy ORM Declarative for SOM.

v0.1.1.a10
----------

 * :class:`~stalker.core.mixins.TaskMixin` from now on doesn't have a ``tasks``
   argument in its ``__init__`` method.

 * Each of the mixin classes now has their own test modules.

 * In :class:`~stalker.core.models.Shot`, now the
   :attr:`~stalker.core.models.Shot.cut_out` attribute is mapped to the
   database instead of the :attr:`~stalker.core.models.Shot.cut_duration`.

 * In :class:`~stalker.core.models.Task` the ``part_of`` attribute is renamed
   to :attr:`~stalker.core.models.Task.task_of` to reflect its duty clearly.

 * Removed the ``ProjectMixin``. The ``project`` attribute has been moved to
   the :class:`~stalker.core.mixins.TaskMixin`. Now anything mixed with the
   :class:`~stalker.core.mixins.TaskMixin` also has a 
   :attr:`~stalker.core.mixins.TaskMixin.project` attribute.

 * :attr:`~stalker.core.models.Task.task_of` attribute in
   :class:`~stalker.core.models.Task` class now accepts anything that has been
   derived from :class:`~stalker.core.mixins.TaskMixin` or anything that has
   both a ``tasks`` attribute and a ``project`` attribute but use the
   :class:`~stalker.core.mixins.TaskMixin` preferably.

 * :class:`~stalker.core.models.Sequence` now doesn't accept any ``shots``
   argument. There is no way to create a :class:`~stalker.core.models.Shot`
   without passing a :class:`~stalker.core.models.Sequence` instance.

 * All the classes that needs to be initialized properly now has a method
   called __init_on_load__ which is called by SQLAlchemy on load.

 * Fixed the :attr:`~stalker.core.models.Task.task_of` attribute in
   :class:`~stalker.core.models.Task` and
   :attr:`~stalker.core.mixins.TaskMixin.tasks` attribute in
   :class:`~stalker.core.mixins.TaskMixin`, they are now updating each other
   correctly.

 * Added :attr:`~stalker.core.models.Shot.assets` to the