@@ -5,7 +5,13 @@ Stalker Changes
 v0.1.2.a1
 ----------
 
- * Started to switch to SQLAlchemy ORM Declarative for SOM.
+ * Started to switch to SQLAlchemy ORM Declarative for SOM, implemented these
+   classes successfully:
+   
+   * SimpleEntity
+   * Type
+   * Tag
+ 
 
 v0.1.1.a10
 ----------
